rolled my own auth, worst mistake in my life

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+coverage.html
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
@@ -23,3 +24,12 @@ go.work.sum
 
 # env file
 .env
+
+# don't commit the Redoc JavaScript bundle
+openapi/redoc.standalone.js
+
+# sqlite database
+sqlite.db
+
+# tmp files used by air
+tmp/*
